--- a/subway/uht/about-e.html
+++ b/subway/uht/about-e.html
@@ -755,15 +755,12 @@ margin-left: 38px;
 				title: "Taxes",
 				href: "https://www.canada.ca/en/services/taxes.html"
 			    },{
-				title: "Income tax",
-				href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+				title: "Excise and specialty taxes",
+				href: "https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html"
 			    },{
-				title: "International and non-resident taxes",
-				href: "https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax.html"
-				},{
 				title: "Underused Housing Tax",
-				href: "index-e.html"
-				}],
+				href: "https://test.canada.ca/cra-arc/subway/uht/index-e.html"
+			    }],
 			search: true,
 			siteMenu: true,
 			showPreContent: true
