--- a/subway/uht/index-e.html
+++ b/subway/uht/index-e.html
@@ -967,19 +967,19 @@ input[type='radio'] {
                     <nav aria-label="Section menu">
                         <h2>Sections</h2>
                         <ul class="gc-navseq">
-                            <li><a href="about-e.html">Who must file a return and pay the tax</a><br>
+                            <li><a href="whomust.html">Who must file a return and pay the tax</a><br>
                                 [Details]
                             </li>
-                            <li><a href="obligation-e.html">Calculate what you owe</a><br>
+                            <li><a href="calculate.html">Calculate what you owe</a><br>
                                 [Details]
                             </li>
-                            <li><a href="tax-e.html">File the return</a><br>
+                            <li><a href="filereturn.html">File the return</a><br>
                                 [Details]
                             </li>
-                            <li><a href="exempt-e.html">Pay the tax</a><br>
+                            <li><a href="paytax.html">Pay the tax</a><br>
                                 [Details]
                             </li>
-                            <li><a href="file-e.html">Contact us</a><br>
+                            <li><a href="contact.html">Contact us</a><br>
                                 [Details]
                             </li>
                           
