--- a/subway/uht/about-e.html
+++ b/subway/uht/about-e.html
@@ -780,13 +780,11 @@ margin-left: 38px;
             <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
             <ul class="gc-navseq">
                 <li class="active"><a aria-current="page"><a href="about-e.html">About the underused housing tax</span></a></li>
-                <li><a href="obligation-e.html">Obligation to file a return</span></a></li>
-                <li><a href="tax-e.html">Liability to pay tax</span></a></li>
-                <li><a href="exempt-e.html">Exemptions</span></a></li>
-                <li><a href="file-e.html">Filing the return</span></a></li>
-                <li><a href="remit-e.html">Paying the tax</span></a></li>
-                <li><a href="tech-e.html">Technical information</span></a></li>
-                <li><a href="contact-e.html">Contact us</span></a></li>
+                <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
+                <li><a href="calculate.html">Calculate what you owe</span></a></li>
+                <li><a href="filereturn.html">File the return</span></a></li>
+                <li><a href="paytax.html">Pay the tax</span></a></li>
+                <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
             <!-- ajax replace to make active menu item -->
             <div class="hidden-sm hidden-xs" data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/digital-economy-gsthst.html#related-menu"> </div>
