--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -779,8 +779,7 @@ margin-left: 38px;
             <nav aria-label="Section menu">
             <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
             <ul class="gc-navseq">
-                <li class="active"><a aria-current="page"><a href="about-e.html">About the underused housing tax</span></a></li>
-                <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
+                <li class="active"><a aria-current="page"><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
                 <li><a href="calculate.html">Calculate what you owe</span></a></li>
                 <li><a href="filereturn.html">File the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
