fix subway links

--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -755,15 +755,12 @@ margin-left: 38px;
 				title: "Taxes",
 				href: "https://www.canada.ca/en/services/taxes.html"
 			    },{
-				title: "Income tax",
-				href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+				title: "Excise and specialty taxes",
+				href: "https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html"
 			    },{
-				title: "International and non-resident taxes",
-				href: "https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax.html"
-				},{
 				title: "Underused Housing Tax",
-				href: "index-e.html"
-				}],
+				href: "https://test.canada.ca/cra-arc/subway/uht/index-e.html"
+			    }],
 			search: true,
 			siteMenu: true,
 			showPreContent: true
@@ -781,15 +778,12 @@ margin-left: 38px;
             </ul>
             <nav aria-label="Section menu">
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
-               <ul class="gc-navseq">
-                <li><a href="about-e.html">About the underused housing tax</span></a></li>
-                <li><a href="obligation-e.html">Obligation to file a return</span></a></li>
-                <li><a href="tax-e.html">Liability to pay tax</span></a></li>
-                <li class="active"><a aria-current="page"><a href="exempt-e.html">Exemptions</span></a></li>
-                <li><a href="file-e.html">Filing the return</span></a></li>
-                <li><a href="remit-e.html">Paying the tax</span></a></li>
-                <li><a href="tech-e.html">Technical information</span></a></li>
-                <li><a href="contact-e.html">Contact us</span></a></li>
+                <ul class="gc-navseq">
+                <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
+                <li class="active"><a aria-current="page"><a href="calculate.html">Calculate what you owe</span></a></li>
+                <li><a href="filereturn.html">File the return</span></a></li>
+                <li><a href="paytax.html">Pay the tax</span></a></li>
+                <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
             <!-- ajax replace to make active menu item -->
             <div class="hidden-sm hidden-xs" data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/digital-economy-gsthst.html#related-menu"> </div>
