--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -791,138 +791,9 @@ margin-left: 38px;
          </section>
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Filing the return</h1>
-			<p>Anyone who has to file a return for residential property must pay the Underused Housing Tax for that property, unless your ownership is exempt for that calendar year.</p>
+			<p>Intro content</p>
 
-            <h2> On this page:</h2>
-            <ul>
-                <li><a href="#1">Multiple residential properties</a></li>
-				<li><a href="#2">Multiple owners</a></li>
-                <li><a href="#3">When is the return due?</a></li>
-				<li><a href="#4">What to report on the return?</a></li>
-                <li><a href="#5">How to file the return</a></li>
-				<li><a href="#6">Penalties for failing to file the return</a></li>
-				<ul>
-					<li><a href="#6-1">Penalties you have to pay</a></li>
-					<li><a href="#6-2">Assessment period extended</a></li>
-				</ul>
-            </ul>
-
-			<h2 id="1">Multiple residential properties</h2>
-			<p>If you are a <a href="">non-excluded owner</a> of two or more <a href="">residential properties</a> on December 31 of a calendar year, you have to file a return for each residential property for the calendar year. You have to file a return for a residential property even if your ownership of it is exempt from the underused housing tax.</p>
-			
-            <h2 id="2">Multiple owners</h2>
-            <p>If there are two or more <a href="">non-excluded owners</a> of a <a href="">residential property</a> on December 31 of a calendar year, each of them has to file a return for the residential property for the calendar year, even if their respective ownership of it is exempt from the underused housing tax.</p>
-			
-            <h2 id="3">When is the return due? </h2>
-			<p>Your return for a <a href="">residential property</a> for a calendar year is due by April 30 of the following calendar year.</p>
-			<p>For example, if you have to file a return for a residential property for the 2022 calendar year, your return is due to us by April 30, 2023.</p>
-    
-
-			<h2 id="4">What to report on the return? </h2>
-			<p>You have to report your underused housing tax payable for the residential property for a calendar year.</p>
-
-			<p>Also, you have to report certain information about you and the residential property for a calendar year. The exact information that you have to report will be available soon, but at minimum, you have to report all of the following information</p>
-			<ul>
-				<li>your legal name</li>
-				<li>your contact information</li>
-				<li>the calendar year to which the return relates</li>
-				<li>the civic address of the residential property and other information about the property</li>
-				<li>the capacity of your ownership of the residential property (for example, an individual, corporation, partner of a partnership, or trustee of a trust)</li>
-				<li>your ownership percentage of the residential property and if the percentage is less than 100 per cent</li>
-				<ul>
-					<li>the form of ownership (that is, joint tenants or tenants-in-common)</li>
-					<li>the names of any other owners having an ownership percentage of 10 per cent or more</li>
-				</ul>
-				<li>the residential property type (for example, a detached house, semi-detached house, rowhouse unit or residential condominium unit)</li>
-				<li>the <a href="">taxable value</a> of the residential property and how it was determined</li>
-				<li>the exemption from tax (if any) for your ownership of the residential property and information related to the exemption</li>
-			</ul>
-			<p>Keep checking this page for updates.</p>
-
-		<h3 id="4-1">What is fair market value?</h3>
-
-			<p>We have longstanding guidelines and criteria under the goods and services tax / harmonized sales tax (GST/HST) to determine the fair market value of real property. We intend to use similar guidelines and criteria for purposes of the election to calculate the underused housing tax payable using the fair market value of a residential property.</p>
-			<p>Generally, fair market value is the highest price, expressed in terms of money or money’s worth, obtainable in an open and unrestricted market between knowledgeable, informed and prudent parties that are acting at arm’s length, neither party being under any compulsion to transact.</p>
-
-		<h2 id="5">How to file the return</h2>
-		<p>You will need a valid Canada Revenue Agency tax identifier number to file your return. Generally, the following are tax identifier numbers</p>
-		<ul>
-			<li>a business number (often called a BN) with underused housing tax program account (RU) identifier</li>
-			<li>a social insurance number (often called a SIN)</li>
-			<li>an individual tax number (often called an ITN)</li>
-			<li>a trust account number </li>
-		</ul>
-
-		<p>If you already have a valid tax identifier number, you may be able to use that tax identifier for the underused housing tax. Otherwise you may have to register for a tax identifier number.</p>
-		<p>Information about tax identifier numbers and how to file your return will be available soon. Keep checking this page.</p>
-
-		<h2 id="6">Penalties for failing to file the return</h2>
-		<p>If you are a <a href="">non-excluded owner</a> of a <a href="">residential property</a> on December 31 of a calendar year, you have to file your return for the residential property for the calendar year by April 30 of the following calendar year. There are penalties if you fail to file your return when it is due.</p>
-
-		<h3 id="6-1">Penalties you have to pay </h3>
-		<p><u>Failure to file your return by April 30 of the following calendar year</u></p>
-
-		<p>If you fail to file your return for a residential property for a calendar year by April 30 of the following calendar year, you have to pay a penalty that is the greater of the two following amounts</p>
-		<ul>
-			<li>$5,000 for non-excluded owners that are individuals or $10,000 for non-excluded owners that are not individuals (such as corporations)</li>
-			<li>the amount that is the total of</li>
-			<ul>
-				<li>5% of your underused housing tax payable for the residential property for the calendar year and</li>
-				<li>3% of your underused housing tax payable for the residential property for the calendar year, multiplied by the number of complete calendar months that the return is past due</li>
-			</ul>
-		</ul>
-		<p><u>Failure to file your return by April 30 of the following calendar year</u></p>
-
-		<p>Generally, if your ownership of a residential property is exempt from tax for a calendar year, your underused housing tax payable for the calendar year is zero.</p>
-		
-		<p>However, if you fail to file your return for a residential property for a calendar year by December 31 of the following calendar year, your underused housing tax payable for the residential property for the calendar year will no longer be zero, for purposes of calculating the total in the second bullet above, if one of the following exemptions applies</p>
-		<ul>
-			<li>exemption for properties that cannot be used throughout the year</li>
-			<li>exemption for uninhabitable properties</li>
-			<li>exemption for primary place of residence</li>
-			<li>exemption for qualifying occupancy</li>
-		</ul>
-
-		<details>
-			<summary>
-				<h4>Example - failure to file penalty</h4>
-			</summary>
-			<p>Mr. B is not a citizen or permanent resident. He is the only person identified in the land registration system as an owner of a property in Canada (a detached house) that he purchased in 2018. The taxable value of the property for the 2022 calendar year is $2,000,000.</p>
-			<p>Due to a severe rainstorm in early October 2022, a river near the property overflows its banks and the property is flooded and uninhabitable until repairs are completed in late March 2023.</p>
-			<p>Mr. B has to file a return for the property for the 2022 calendar year by April 30, 2023. He does not have to pay the underused housing tax for his 100% ownership percentage of the property for the 2022 calendar year because it was uninhabitable for at least 60 consecutive days in that calendar year as a result of a disaster caused by circumstances beyond his reasonable control and this exemption did not apply to the property for the same disaster in any previous calendar year.</p>
-			<p>Mr. B fails to file his return for the property for the 2022 calendar year by April 30, 2023. The consequences of failing to file his return when required are as follows.</p>
-			<p><u>If Mr. B files the return before January 1, 2024</u></p>
-
-			<p>Assume Mr. B files his return for the property for the 2022 calendar year after April 30, 2023, and before January 1, 2024. The penalty for failing to file his return when required would be calculated taking into account that the exemption for uninhabitable properties applies for that calendar year.</p>
-			<p>The penalty amount that Mr. B would have to pay would be $5,000. This would be the greater of the two following amounts</p>
-			<ul>
-				<li>$5,000 (Mr. B is a non-excluded owner who is an individual)</li>
-				<li>$0, which is the total of</li>
-				<ul>
-					<li>$0 (Mr. B’s underused housing tax payable for the residential property for the 2022 calendar year is zero; 5% of zero is zero) and</li>
-					<li>$0 (Mr. B’s underused housing tax payable for the residential property for the 2022 calendar year is zero; 3% of zero is zero, regardless of the number of complete calendar months that the return is past due)</li>
-				</ul>
-			</ul>
-
-			<p><u>If Mr. B files the return after December 31, 2023</u></p>
-			<p>Assume Mr. B files his return for the property for the 2022 calendar year on January 10, 2024. The return would be past due by eight complete calendar months (that is, May to December 2022). The penalty for failing to file his return when required would be calculated as if the exemption for uninhabitable properties did not apply for that calendar year.</p>
-
-			<p>The penalty amount that Mr. B would have to pay would be $5,800. This would be the greater of the two following amounts</p>
-			<ul>
-				<li>$5,000 (Mr. B is a non-excluded owner that is an individual)</li>
-				<li>$5,800, which is the total of</li>
-				<ul>
-					<li>$1,000 (if the exemption for uninhabitable properties did not apply for the 2022 calendar year, Mr. B’s underused housing tax payable would be $20,000 (1% × $2,000,000 taxable value × 100% ownership percentage = $20,000); 5% of $20,000 is $1,000) and</li>
-					<li>$4,800 (if the exemption for uninhabitable properties did not apply for the 2022 calendar year, Mr. B’s underused housing tax payable would be $20,000; 3% of $20,000 is $600; $600 multiplied by 8 complete calendar months past due is $4,800)</li>
-				</ul>
-			</ul>
-	</details>
-
-	<h3 id="6-2">Assessment period extended</h3>
-	<p>There is no time limit for us to assess you the underused housing tax, penalties and interest for a calendar year if you fail to file your return for a residential property for the calendar year when required.</p>
-
-
-
+           
 
 <!--
     <nav class="mrgn-bttm-lg mrgn-tp-lg">
