--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -972,6 +972,9 @@ input[type='radio'] {
                             <li><a href="calculate.html">Calculate what you owe</a><br>
                                 [Details]
                             </li>
+				<li><a href="downloadcomplete.html">Download and complete your return</a><br>
+                                [Details]
+                            </li>
                             <li><a href="filereturn.html">File the return</a><br>
                                 [Details]
                             </li>
