--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -791,6 +791,8 @@ margin-left: 38px;
          </section>
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Contact us</h1>
+		 
+		 <div class="mwsgeneric-base-html parbase section">
 			    <div class="row">
   <div class="col-md-8">
     <dl class="dl-horizontal brdr-0">
