--- a/subway/uht/paytax.html
+++ b/subway/uht/paytax.html
@@ -793,7 +793,94 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Pay the tax</h1>
 			
-           
+           		<p>If you are an <strong>affected owner</strong> of a residential property on <span class="nowrap">December 31</span>, you must file a return for the Underused Housing Tax. If your ownership of the residential property does <strong>not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
+
+			<h2 id="1">When the payment is due</h2>
+<p>Your payment for a calendar year is due by <span class="nowrap">April 30</span> of the following calendar year.</p>
+<p>	If you do not pay your Underused Housing Tax owing by <span class="nowrap">April 30</span>, we will begin charging you interest on the amount you owe.</p>
+<p>For more information: <a href="/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a>
+
+
+
+            </p><h2 id="2">How to pay</h2>
+			<p>Individuals and corporations may both pay the Underused Housing Tax using <strong>any one of the following</strong> methods:
+			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col-60">
+    <p>Online payment </p>
+  </li>
+  <li class="cnjnctn-col">
+    <p>Wire transfer or internationally issued credit card</p>
+  </li>
+  <li class="cnjnctn-col">
+    <p>Cheque</p>
+  </li>
+</ul>
+			   <p>Regardless of how you make your payment, all amounts must be paid in Canadian dollars.</p>
+
+			
+			
+<h3>Pay online</h3>
+<p>If you are an <strong>individual</strong>, you may pay online <strong>after <span class="nowrap">Feb 6, 2023</span></strong>, using the following method:</p>
+<ul>
+  <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li></ul>
+				<p>If you are an individual making an online payment, you may <strong>only</strong> use the “Underused Housing Tax” option (available after <span class="nowrap">February 6, 2023</span>).</p>
+ 
+<p>If you are a <strong>corporation</strong>, you may pay online using <strong>any of the following </strong>methods:</p>
+
+<ul>
+  <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li>
+  <li>Online banking with your Canadian financial institution</li>
+  <li><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-online-banking.html">Online banking</a></li>
+</ul>
+
+<p>If you are a corporation making an online payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
+
+<h3>Pay by wire transfer or internationally issued credit card</h3>
+<p> If you are an individual or a corporation, you might not have a Canadian bank account. In that case, you may pay using a wire transfer or an internationally issued credit card.</p>
+<p><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a> (available after February 6, 2023).</p>
+<h3>Pay by cheque</h3>
+
+<p>If you would like to mail a cheque, make it out to: </p>
+<p>The Receiver General for Canada.</p>
+
+<p>Include the following information:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col-70">
+    <h4 class="mrgn-tp-sm text-muted">If you are an individual<span class="wb-inv">: </span></h4>
+    <ul>
+   <li>Your social insurance number (SIN)</li>
+   <li>Your non-resident account number (ITN)</li>
+   <li>The calendar year for which you are paying</li>
+   </ul>
+  </li>
+  <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted">If you are a corporation<span class="wb-inv">: </span></h4>
+    <ul>
+   <li>Your CRA Underused Housing Tax business number (BN-RU)</li>
+   <li>The calendar year for which you are paying</li>
+   </ul>
+  </li>
+</ul>
+<p>Send your cheque to the following address:</p>
+   <p>Canada Revenue Agency <br> PO Box 3800 STN A <br> Sudbury ON P3A 0C3</p>
+   
+   <p>More information on how individuals can make a payment will be available in February 2023, so keep checking this page for updates.</p>
+  
+  
+
+
+<ul class="pager">
+  <li class="next"><a href="/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/contact-cra.html" rel="next">Contact us about the Underused Housing Tax</a></li>
+</ul>
+
+</div>
+</div>
+
+
+
+</div>
+
 
 
 
