--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -781,6 +781,7 @@ margin-left: 38px;
                <ul class="gc-navseq">
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
                 <li><a href="calculate.html">Calculate what you owe</span></a></li>
+	<li><a href="calculate.html">Download and comlete the return</span></a></li>
                 <li><a href="filereturn.html">File the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
                 <li class="active"><a aria-current="page"><a href="contact.html">Contact us</span></a></li>
