--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -866,6 +866,22 @@ margin-left: 38px;
           </div>
         </dd>
       </dl>	  
+
+
+     <h2 id="h_5">Due date to file the return or an election</h2>
+	
+	<p><span class="h4"><span class="fas fa-calendar-day fa-lg mrgn-rght-sm"></span>April 30</span> is the date:</p>		  
+		  
+      <ul class="lst-spcd">
+        <li>you must file your return from the previous calendar year</li>
+      <li>you must pay any Underused Housing Tax you owe from the previous calendar year</li>
+      <li>you must file an election to use the fair market value to calculate the tax you owe, or to qualify for the exemptions for primary place of residence or qualifying occupancy, along with the return</li></ul>
+     <h3>Penalties for failing to file the return on time</h3>
+      <p>There are significant penalties if you fail to file an&nbsp;Underused Housing Tax return when it is due. Affected owners who are individuals are subject to a minimum penalty of <span class="nowrap">$5,000</span>. Affected owners that are corporations are subject to a minimum penalty of <span class="nowrap">$10,000</span>.</p>
+
+
+
+
 		   <h2 id="h_6">Keep your records</h2>
         <p>If you are an affected owner of a residential property in Canada on <span class="nowrap">December 31</span>, you must file an Underused Housing Tax return for the residential property. You must also keep records to support the determination of your obligations and liabilities. Even if your ownership is exempt and you do not have to pay the tax, you must still keep records. If you claim an exemption but do not have adequate records to support that exemption, we <strong>may disallow</strong> it.</p>  
 		  
