--- a/payroll/file/t4anrslip.html
+++ b/payroll/file/t4anrslip.html
@@ -192,7 +192,7 @@
                   
                   <ul class="fa-ul">
                      <li><span class="fas fa-check text-success fa-li"></span> Payment to <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html">non-resident</a> individuals, partnerships, and corporations for services they performed in Canada that they did not perform in the ordinary course of an office or employment</li>
-                    <li><span class="fas fa-check text-success fa-li"></span> Payments for acting services of a stage performer or state actor, or services for behind-the-scenes personnel are reported on a T4A-NR slip</li> 
+                    <li><span class="fas fa-check text-success fa-li"></span> Payments for acting services of a stage performer or stage actor, or services for behind-the-scenes personnel are reported on a T4A-NR slip</li> 
                   </ul>
                
                    </div>
@@ -218,7 +218,7 @@
 			<div class="col-md-6">
                   <h4 id="h-3-3" class="mrgn-tp-sm text-muted">Do</h4>
                   <ul class="fa-ul">
-                     <li><span class="fas fa-check text-success fa-li"></span> If you have multiple payroll accounts, file a separate T4A-NR return for each payroll account based on the account that the payments wre made from</li>
+                     <li><span class="fas fa-check text-success fa-li"></span> If you have multiple payroll accounts, file a separate T4A-NR return for each payroll account based on the account that the payments were made from</li>
                      <li><span class="fas fa-check text-success fa-li"></span>Amounts are reported on a T4A-NR slip for <strong>the year in which it is paid</strong></li>
                      <li><span class="fas fa-check text-success fa-li"></span>Report, in dollars and cents, all amounts you paid during the year</li>
                      <li><span class="fas fa-check text-success fa-li"></span>Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
