--- a/payroll/file/t1204slip.html
+++ b/payroll/file/t1204slip.html
@@ -189,7 +189,7 @@
                   
                   <ul class="fa-ul">
                     <li><span class="fas fa-check text-success fa-li"></span> Payments to <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/information-been-moved/determining-your-residency-status.html">contractors who are residents of Canada</a> for services provided inside or outside Canada</li>
-       <li><span class="fas fa-check text-success fa-li"></span> Amounts are reported on a T4A-NR slip for the <strong>year in which it is paid</strong></li>
+       <li><span class="fas fa-check text-success fa-li"></span> Amounts are reported on a T1204 slip for the <strong>year in which it is paid</strong></li>
  <li><span class="fas fa-check text-success fa-li"></span> Amounts paid or credited, whether by cheque, cash, barter, or offset against an amount owing</li>
 		
 		                  </ul>
