--- a/payroll/file/t5018slip.html
+++ b/payroll/file/t5018slip.html
@@ -197,7 +197,7 @@
 
 <h4>List of examples of common construction activities</h4>
  
-<details><summary> Example of construction activities</summary>
+<details><summary> Examples of construction activities</summary>
 <ul class="fa-ul colcount-sm-2">
 <li><span class="fas fa-check text-success fa-li"></span> Air conditioning work </li>
 <li><span class="fas fa-check text-success fa-li"></span> Asphalt paving </li>
@@ -323,7 +323,7 @@
                   <h4 id="h-3-3" class="mrgn-tp-sm text-muted">Do</h4>
                   <ul class="fa-ul">
                      <li><span class="fas fa-check text-success fa-li"></span> If you have multiple payroll accounts, file a separate T5018 return for each payroll account based on the account that the payments were made from</li>
-		<li><span class="fas fa-check text-success fa-li"></span> Amounts are reported on a T4A-NR slip for the <strong>year in which it is paid</strong></li>	  
+		<li><span class="fas fa-check text-success fa-li"></span> Amounts are reported on a T5018 slip for the <strong>year in which it is paid</strong></li>	  
                      <li><span class="fas fa-check text-success fa-li"></span> Report, in dollars and cents, all amounts you paid during the year</li>
                      <li><span class="fas fa-check text-success fa-li"></span> Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
                     </ul>
@@ -368,9 +368,9 @@
 </details> 
 
  <details>  <summary>Box 24 – Recipient's program account number or Social insurance number (SIN)</summary> 
-  <p>Enter the recipient's:</p>
+  <p>Enter either the recipient’s:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"> 15-character <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RT0001) </li> 
+<li class="cnjnctn-col"> 15-character <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">account number&nbsp;<span class="far fa-question-circle"></span></a>(for example, 123456789RT0001) </li> 
 <li class="cnjnctn-col-50"> SIN </li>
  </ul>
   <p>To verify if the subcontractor is registered for GST/HST, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/confirming-a-gst-hst-account-number.html">Confirming a GST/HST account number</a></p> 
