--- a/payroll/remit/pd7r.html
+++ b/payroll/remit/pd7r.html
@@ -92,8 +92,8 @@
   </li>  
 	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
     </li>
 	 <li>
       <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
@@ -108,12 +108,12 @@
       <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
     </li>
 
 </ul></li>
@@ -152,12 +152,6 @@
 <p>The PD7R <strong>cannot </strong>be used to remit <strong>current </strong>payroll remittances. You must use the PD7A for current remittances.</p>
 
  <h2 id="h_2">Eligibility to use PoF</h2>
-<p>You may be eligible to use PoF if your payroll account meets all conditions. If you have <strong>more than 1 </strong>payroll account (for example: <strong>123456789RP0001 </strong>and <strong>123456789RP0002</strong>), you may have a payroll account that is eligible and some that are not. </p>
-<details><summary>Example</summary>
-<p>Your business with payroll account number <strong>123456789RP0001 </strong>received a late-remitting penalty. Your payroll account is not eligible to use PoF. </p>
-<p>You also have have another payroll account <strong>123456789RP0002 </strong>and it has perfect payroll compliance. Your payroll account is eligible to use PoF. </p>
-</details>
-
 <p>You are eligible to use PoF if you meet <strong>all </strong>of the following 3 conditions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and ">
@@ -177,7 +171,13 @@
 </ul>
 </li>
 </ul>
-		 
+
+<p>If you have <strong>more than 1 </strong>payroll account (for example: <strong>123456789RP0001 </strong>and <strong>123456789RP0002</strong>), you may have a payroll account that is eligible and some that are not. </p>
+
+<details><summary>Example</summary>
+<p>Your business with payroll account number <strong>12345 6789 RP 0001 </strong>received a late-remitting penalty. Your payroll account is not eligible to use PoF. </p>
+<p>You also have have another payroll account <strong>12345 6789 RP 0002 </strong>and it has perfect payroll compliance. Your payroll account is eligible to use PoF. </p>
+</details>		 
 
 <h2 id="h_3">What happens if you use PoF and you are not eligible</h2>
 <p>If you use PoF and you are <strong>not </strong>eligible, <strong>penalties and interest </strong>will be applied.</p>
