--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -955,7 +955,8 @@ input[type='radio'] {
         <div class="row">
             <div class="col-md-8">
 
-                <p>The Underused Housing Tax is an annual 1% tax on the ownership of vacant or underused housing in Canada that took effect on January 1, 2022. The tax applies to non-resident, non-Canadian owners, as well as some Canadian owners such as certain partners, trustees, and corporations.
+                <p>The Underused Housing Tax is an annual 1% tax on the ownership of vacant or underused housing in Canada that took effect on January 1, 2022.</p>
+		    <p>The tax generally applies to non-resident, non-Canadian owners of housing in Canada. However, in some situations, this tax also applies to some Canadian owners (such as certain partners, trustees, and corporations).
                 </p>
             
 
