--- a/payroll/remit/pd1114.html
+++ b/payroll/remit/pd1114.html
@@ -92,8 +92,8 @@
   </li>  
 	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
     </li>
 	 <li>
       <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
@@ -108,12 +108,12 @@
 
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
     </li>
 
 </ul></li>
@@ -164,7 +164,7 @@
 
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account (MyBA)</a> or <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client (RAC)</a> (select "<strong>Respond to notices</strong>") </li>
-<li>Fax at the number or address provided on the PD1114 (using the <strong>Remittance breakdown </strong>form) </li>
+<li>Fax at the number or by mail to the address provided on the PD1114 (using the <strong>Remittance breakdown </strong>form) </li>
 <li>Phone at <strong>1-800-959-5525</strong> </li>
 </ul>
 
