--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -812,6 +812,20 @@ margin-left: 38px;
 				
 				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
 
+	<p>If you are a Canadian person described in the Examples of affected owners section above, you have to file an annual return for the residential property. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
+		 <p>To help you determine if your ownership of a residential property is exempt from the underused housing tax for a calendar year, refer to the various Underused housing tax notices.</p>
+		 <p>Even if your ownership of a residential property is exempt from the underused housing tax for a calendar year, if you are an affected owner, you still have to file a return for the residential property and indicate the applicable exemption in your return.</p>
+
+<p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
+		 
+		 
+		 
+		 
+		 
+		 
+		 
+		 
+		 
             <h2>Determine if you are an affected owner or an excluded owner</h2>
 		     <p>The following provides the same information in <strong>two</strong> different formats:</p>
       <ul class="cnjnctn-type-or cnjnctn-sm">
