--- a/payroll/remit/pd7dar.html
+++ b/payroll/remit/pd7dar.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
+         <title>Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -92,8 +92,8 @@
   </li>  
 	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
     </li>
   
 	 <li>
@@ -110,12 +110,12 @@
       <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
     </li>
  <li>
-     <a href="pd7dar.html" class="active" aria-current="page">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>      
+     <a href="pd7dar.html" class="active" aria-current="page">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>      
 
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>
     </li>
 
 </ul></li>
@@ -137,12 +137,12 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</h1>
 <h2 class="h3">On this page</h2>
   <ul>
 
-  <li><a href="#h_1">What is a PD7D(AR)</a></li> 
-<li><a href="#h_3">What to do if you received a PD7D(AR)</a></li></ul>
+  <li><a href="#h_1">What is a PD7D (AR)</a></li> 
+<li><a href="#h_3">What to do if you received a PD7D (AR)</a></li></ul>
 
  <h2 id="h_1">What is a PD7D(AR)</h2>
 <p>The PD7D(AR) is sent when a <strong>partial </strong>payment for an arrears balance is received.</p>
@@ -154,10 +154,10 @@
 <li class="cnjnctn-col">A remittance voucher </li>
 </ul>
 
-<h2 id="h_3">What to do if you received a PD7D(AR)</h2>
-<p>If you received a PD7D(AR), you <strong>must </strong>use the PD7D(AR) to remit (pay).</p>
+<h2 id="h_3">What to do if you received a PD7D (AR)</h2>
+<p>If you received a PD7D (AR), you <strong>must </strong>use the PD7D (AR) to remit (pay) your arrears balance.</p>
 
-<p>You <strong>cannot</strong> use the PD7D(AR) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
+<p>You <strong>cannot</strong> use the PD7D (AR) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
 <p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a></p>
 
 
