--- a/payroll/remit/pd7dx.html
+++ b/payroll/remit/pd7dx.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Statement of account and payment on existing balance remittance voucher - PD7D(X) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
+         <title>Statement of account and payment on existing balance remittance voucher - PD7D (X) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -92,8 +92,8 @@
   </li>  
 	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A (TM)</a>
     </li>
   
 	 <li>
@@ -110,11 +110,11 @@
       <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>      
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D (AR)</a>      
     </li>
 <li>
-     <a href="pd7dx.html" class="active" aria-current="page">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>   
+     <a href="pd7dx.html" class="active" aria-current="page">Statement of account and payment on existing balance remittance voucher - PD7D (X)</a>   
       
     </li>
 
@@ -137,31 +137,31 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account and payment on existing balance remittance voucher - PD7D(X)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account and payment on existing balance remittance voucher - PD7D (X)</h1>
 
 <h2 class="h3">On this page</h2>
   <ul>
 
-  <li><a href="#h_1">What is a PD7D(X)</a></li> 
-<li><a href="#h_2">How often is a PD7D(X) sent</a></li>  
-<li><a href="#h_3">What to do if you received a PD7D(X)</a></li></ul>
+  <li><a href="#h_1">What is a PD7D (X)</a></li> 
+<li><a href="#h_2">How often is a PD7D (X) sent</a></li>  
+<li><a href="#h_3">What to do if you received a PD7D (X)</a></li></ul>
 
- <h2 id="h_1">What is a PD7D(X)</h2>
-<p>The PD7D(X) is a notice that is generated as per your request when there is an <strong>existing balance owing</strong>.</p>
+ <h2 id="h_1">What is a PD7D (X)</h2>
+<p>The PD7D (X) is a notice that is generated as per your request when there is an <strong>existing balance owing</strong>.</p>
 
-<p>The PD7D(X) consists of <strong>both</strong>:</p>
+<p>The PD7D (X) consists of <strong>both</strong>:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col">A statement of account </li>
  <li class="cnjnctn-col">A remittance voucher that is used to pay an existing balance  </li>
 </ul>
 
-<h2 id="h_2">How often is a PD7D(X) sent</h2>
-<p>The PD7D(X) is <strong>only</strong> sent as per your request <strong>if </strong>there is an <strong>existing balance owing</strong>.</p>
+<h2 id="h_2">How often is a PD7D (X) sent</h2>
+<p>The PD7D (X) is <strong>only</strong> sent as per your request <strong>if </strong>there is an <strong>existing balance owing</strong>.</p>
 
-<h2 id="h_3">What to do if you received a PD7D(X)</h2>
-<p>If you received a PD7D(X), you <strong>must </strong>use the PD7D(X) to remit (pay).</p>
+<h2 id="h_3">What to do if you received a PD7D (X)</h2>
+<p>If you received a PD7D (X), you <strong>must </strong>use the PD7D (X) to remit (pay) your existing balance.</p>
 <p>If a <strong>partial </strong>payment is made on a balance owing, we will send you an updated <a href="/cra-arc/payroll/file/pd7d.html">Notice of assessment (PD7D)</a> with a new arrears remittance voucher and an updated balance including the interest.</p>
-<p>You <strong>cannot</strong> use the PD7D(X) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
+<p>You <strong>cannot</strong> use the PD7D (X) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
 <p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a></p>
 
 
