--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -1086,7 +1086,8 @@ margin-left: 38px;
         <summary>Availability of the residential property</summary>
         <p>Your ownership of a residential property may be exempt for a calendar year if the property is:</p>
         <ul id="exp-2">
-          <li>newly constructed</li>
+		<li>used as a primary place of residence or for qualifying occupancy</li>
+		<li>newly constructed</li>
           <li>not suitable to be lived in year-round, or seasonally inaccessible</li>
           <li>uninhabitable for a certain number of days because of
             <ul>
