--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -186,8 +186,8 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 	   
 
      <h2 id="h-4">Claims for more than one qualifying renovation in a year</h2>
-	   <p>If  you complete two qualifying renovations for two separate qualifying individuals, you can calculate and claim the MHRTC for each one.</p>
-	   <details><summary>Example: Completing two qualifying renovations in the same year</summary>
+	   <p>If  you complete 2 qualifying renovations for 2 separate qualifying individuals, you can calculate and claim the MHRTC for each one.</p>
+	   <details><summary>Example: Completing 2 qualifying renovations in the same year</summary>
 		   <p>Des is related to three qualifying individuals: her brother, her mother, and her father. </p>
 <p>In April 2023, she renovated her house to create a self-contained basement apartment so her brother could move in with her. This renovation was completed in October 2023. Her qualifying expenses for this renovation were <strong>$15,000</strong>.</p>
 
