--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -100,7 +100,7 @@ Ends when the qualifying renovation is completed (for example, when the qualifyi
 				 </details>
 		 
 		  <h2 id="h-2">Splitting the credit between eligible individuals</h2>
-	   <p>When two or more individuals share the costs for the same qualifying renovation, the credit may be split between them as long as <strong>all</strong> of the following conditions are met:
+	   <p>When 2 or more individuals share the costs for the same qualifying renovation, the credit may be split between them as long as <strong>all</strong> of the following conditions are met:
 	   <ul class="fa-ul">
 		 <li><span class="fas fa-check text-success fa-li"></span>Each person claiming the MHRTC is an <strong>eligible individual</strong>
 	   	<p>
