--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -832,7 +832,7 @@ margin-left: 38px;
 		 
 		 
 		 
-            <h2>Determine if you are an affected owner or an excluded owner</h2>
+            <h2>Determine if you are an excluded owner or an affected owner</h2>
 		     <p>The following provides the same information in <strong>two</strong> different formats:</p>
       <ul class="cnjnctn-type-or cnjnctn-sm">
         <li class="cnjnctn-col">Answer <a href="#interactive" class="wb-tabs-ext">some interactive questions</a> to determine your ownership situation and if exempt</li>
