--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -816,10 +816,7 @@ margin-left: 38px;
 			 <p>Content</p>
 		 </details>	
 				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
-<p>If you are an affected owner, you have to file an annual return for each of your residential properties.</p>
-		 
-		 
-		<p>Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
+<p>If you are an affected owner, you have to file an annual return for each of your residential properties. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
 		 <p>Even if your ownership of a residential property is exempt from the underused housing tax for a calendar year, if you are an affected owner, you still have to file a return for the residential property and indicate the applicable exemption in your return.</p>
 
 <p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
