--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -134,13 +134,13 @@
  <div id="ajax-calcother">
                   <p>Before you calculate, you need to know if the benefit is taxable. </p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a> </p>
-	                           
+	<hr>                           
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, do not continue to next step. You do not need to calculate the GST/HST.</li>
+   <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, <strong>do not</strong> continue to next step. You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> If the benefit is taxable, continue to <a href="#special">Step 2 - Determine if the GST/HST is not considered collected in special situations</a>.</li>
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the benefit is <strong>taxable</strong></li>
 </ul>
 
 </div>
@@ -155,29 +155,21 @@
 <li><details><summary>GST/HST not considered collected</summary>
    <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-not1"></div>
 	                           
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
-  
- <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> If <strong>one of the conditions are met</strong>, do not continue to next step. You do not need to calculate the GST/HST.</li>
-<li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> If the conditions above <strong>are not met</strong> and it is an <strong>automobile</strong>, continue to <a href="#auto">Step 2b - GST/HST not considered collected, automobile or motor vehicles</a>.</li>
- 
-<li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> If the conditions above <strong>are not met</strong> in other situations, continue to <a href="#rategst">Step 3 - Determine which GST/HST rate to apply</a>.</li>
-
-
- </ul></details></li>
+</details></li>
 
 <li><details><summary>GST/HST not considered collected, <strong>automobile or motor vehicles</strong></summary>
  <p id="auto"> <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-not2"></div></p>
+</details></li>
+<hr>                           
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> If <strong>one of the conditions are met</strong>, do not continue to next step. You do not need to calculate the GST/HST.</li>
+   <span class="fas fa-ban text-danger fa-lg"></span> If the GST/HST is <strong>not </strong> considered collected because it is in a special situation, <strong>do not</strong> continue to next step. You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> If the conditions above <strong>are not met</strong>, continue to <a href="#rategst">Step 3 - Determine which GST/HST rate to apply</a>.</li>
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the GST/HST is considered collected</li>
+</ul>
 
-</ul></details></li>
+
 
 </ol>
 
