--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -154,11 +154,13 @@
 <ol class="lst-stps-sub stps-strpd">
 <li><details><summary>GST/HST not considered collected</summary>
    <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-not1"></div>
-	                           
+<p>If <strong>one of the above conditions are met</strong>, you <strong>do not</strong> need to calculate the GST/HST.</p> 	                           
 </details></li>
 
 <li><details><summary>GST/HST not considered collected, <strong>automobile or motor vehicles</strong></summary>
  <p id="auto"> <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-not2"></div></p>
+<p>If <strong>one of the above conditions are met</strong>, you <strong>do not</strong> need to calculate the GST/HST.</p> 
+
 </details></li>
 <hr>                           
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
