--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -138,7 +138,8 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, <strong>do not</strong> continue to next step. You <strong>do not</strong> need to calculate the GST/HST.</li>
+   <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, <strong>do not</strong> continue to next step. </p>
+<p>You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the benefit is <strong>taxable</strong></li>
 </ul>
@@ -162,11 +163,12 @@
 <p>If <strong>one of the above conditions are met</strong>, you <strong>do not</strong> need to calculate the GST/HST.</p> 
 
 </details></li>
-<hr>                           
+                         
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> If the GST/HST is <strong>not </strong> considered collected because it is in a special situation, <strong>do not</strong> continue to next step. You <strong>do not</strong> need to calculate the GST/HST.</li>
+   <span class="fas fa-ban text-danger fa-lg"></span> If the GST/HST is <strong>not </strong> considered collected because it is in a special situation, <strong>do not</strong> continue to next step. </p>
+<p>You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the GST/HST is considered collected</li>
 </ul>
