--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -514,7 +514,7 @@ Matthew reimbursed his employer $500 for the standby charge, $300 for operating 
 
 
  </li>
- <li><h3>When to remit and file the GST/HST</h3>
+ <li><h3>When to remit and file the GST/HST return</h3>
  <p id="remit"> <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-remit"></div></p>
 	    
   </li>
