--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -137,7 +137,7 @@
                      </thead>
                      <tbody>
                         <tr>
-                           <td><a href="advance.html">Advance payments</a> <span class="label label-warning">ABSB - Circulation</span></td>
+                           <td><a href="advance.html">Advance payments</a> <span class="label label-success">Live</span></td>
 				
                            <td>Type of remuneration </td>
                         </tr>
