--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -135,7 +135,7 @@
                   <p>Before you calculate, you need to know if the benefit is taxable. </p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a> </p>
 	<hr>                           
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   
  <li class="cnjnctn-col">
    <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, <strong>do not</strong> continue to next step. </p>
@@ -164,7 +164,7 @@
 
 </details></li>
                          
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   
  <li class="cnjnctn-col">
    <span class="fas fa-ban text-danger fa-lg"></span> If the GST/HST is <strong>not </strong> considered collected because it is in a special situation, <strong>do not</strong> continue to next step. </p>
@@ -514,7 +514,7 @@ Matthew reimbursed his employer $500 for the standby charge, $300 for operating 
 
 
  </li>
- <li><h3>When to remit and file the GST/HST return</h3>
+ <li><h3>When to remit and file GST/HST returns</h3>
  <p id="remit"> <div data-ajax-replace="/cra-arc/payroll/calculate/when/learngsthst.html #ajax-remit"></div></p>
 	    
   </li>
