--- a/payroll/calculate/when/learngsthst.html
+++ b/payroll/calculate/when/learngsthst.html
@@ -122,7 +122,7 @@
             <ul>
                <li><a href="#h_1">How GST/HST applies to benefits</a></li>
                <li><a href="#h_2">Determine if you have to remit GST/HST on benefits</a></li>
-               <li><a href="#h_3">When to remit and file the GST/HST return</a></li>
+               <li><a href="#h_3">When to remit and file GST/HST returns</a></li>
                <li><a href="#h_4">Can you claim input tax credits (ITCs) on benefits</a></li>
                <li><a href="#h_5">What to do if you have employees whose province of employment is Quebec</a></li>
                <li><a href="#h_6">References</a></li>
@@ -187,7 +187,7 @@
 <li class="cnjnctn-col"><a href="/cra-arc/payroll/calculate/payment/index.html">Determine the tax treatment of payments other than regular employment income</a> </li>
 </ul>
 
-<h2 id="h_3">When to remit and file the GST/HST return</h2>
+<h2 id="h_3">When to remit and file GST/HST returns</h2>
 <div id="ajax-remit">
 <p>GST/HST calculated on benefits must be remitted as follows:</p>
 <ul class="list-unstyled cnjnctn-type-or">
