--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -170,10 +170,10 @@
       
                </li>
                <li>
-                  <h4>Determine if the employee reached the maximum premiums</h4>
+                  <h4>Determine if your employee reached the maximum premiums</h4>
 <div id="ajax-detmax">
-<h5>Employee has more than one employer</h5>
-<p>You <strong>must</strong> withhold EI premiums until the employee reaches the maximum without taking into account deductions made by another employer.</p>
+
+<p>You <strong>must</strong> withhold EI premiums until your employee reaches the maximum without taking into account deductions made by another employer.</p>
  
               <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
@@ -394,7 +394,7 @@
  <h3>Steps</h3>  
           <ol class="lst-stps stps-strpd">
  <li>
-			<h4>Determine if the employee reached the maximum premiums</h4>
+			<h4>Determine if your employee reached the maximum premiums</h4>
                            <p>   <div data-ajax-replace="#ajax-detmax"></div></p> 
                          </li>
 
