--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -203,15 +203,19 @@
 	<img src="/cra-arc/payroll/calculate/how/images/td1-total-income-less-e.png" alt="Back of TD1 form checkbox for total income less than total claim amount" class="img-responsive" />
 	</div>
 	<div class="mrgn-lft-md mrgn-rght-md">	
-<p>Review the completed <a href="/cra-arc/payroll/employee/td1.html">TD1 forms</a> and verify if the employee checked the box "Total income less than total claim amount". </p>
+<p>Review the completed <a href="/cra-arc/payroll/employee/td1.html">TD1 forms</a> and verify if your employee checked the box "Total income less than total claim amount". </p>
 	</div>
 	</div>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"> </span> If they checked this box, <strong>do not deduct</strong> any federal or provincial tax. <strong>Do not</strong> use the tax tables.</li>
+ <p>   <span class="fas fa-ban text-danger fa-lg"> </span> If your employee checked this box, <strong>do not deduct</strong> any federal or provincial tax.  </p>
+ <p><strong>Do not</strong> use the tax tables. </p></li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> If they checked this box but <strong>you believe it is a false statement</strong>, continue to next step.</li>
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if your employee checked this box but <strong>you believe it is a false statement</strong>.</li>
+ <li class="cnjnctn-col">
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#ajax-ittable">step 6</a> if your employee did not complete new TD1 forms. Use the same claim code that you used previously.</li>
+
 </ul></div>
 </li>
 
