--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -141,7 +141,7 @@
    <span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not </strong> taxable, <strong>do not</strong> continue to next step. </p>
 <p>You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the benefit is <strong>taxable</strong></li>
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the benefit is <strong>taxable</strong>.</li>
 </ul>
 
 </div>
@@ -170,7 +170,7 @@
    <span class="fas fa-ban text-danger fa-lg"></span> If the GST/HST is <strong>not </strong> considered collected because it is in a special situation, <strong>do not</strong> continue to next step. </p>
 <p>You <strong>do not</strong> need to calculate the GST/HST.</li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the GST/HST is <strong>considered collected</strong></li>
+    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if the GST/HST is <strong>considered collected</strong>.</li>
 </ul>
 
 
