--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -195,7 +195,6 @@
  </li> 
 
 <li><h4>Review the completed TD1 forms to determine if you need to deduct tax</h4>
-<p>If your employee did not complete new TD1 forms, use the same claim code that you used previously and continue to <a href="#ajax-ittable">step 6</a>.</p>
 
 <div id="ajax-review">
 <div class="row">
@@ -214,7 +213,8 @@
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if your employee checked this box but <strong>you believe it is a false statement</strong>.</li>
  <li class="cnjnctn-col">
-    <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#ajax-ittable">step 6</a> if your employee did not complete new TD1 forms. Use the same claim code that you used previously.</li>
+ <p>   <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to Step 6 - Get the federal, provincial and territorial income tax tables if your employee <strong>did not complete new TD1 forms</strong>. </p>
+<p>Use the same claim code that you used previously.</p></li>
 
 </ul></div>
 </li>
@@ -1899,10 +1899,10 @@
  </li> 
 
 <li><h4> Determine the calculation to use </h4>
-  <p>If your employee's total remuneration is: </p>  
+  <p>If your employee's total remuneration from step 1 is: </p>  
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><strong>Less than $5,000</strong>, continue to <a href="#2a">step 2a</a></li>
-               <li class="cnjnctn-col"><strong>More than $5,000</strong>, continue to <a href="#2b">step 2b</a></li>
+              <li class="cnjnctn-col"><strong>Less than $5,000</strong>, continue to <a href="#2a">Step 2a</a>.</li>
+               <li class="cnjnctn-col"><strong>More than $5,000</strong>, continue to <a href="#2b">Step 2b</a>.</li>
             </ul> 
 
 <ol class="lst-stps-sub">
@@ -1929,7 +1929,7 @@
                               </li>
 
                   </ul>
-<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong> </p>
+<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong>. </p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>Diane's pay increased from $440 to $460 per week. The retroactive pay increase was effective for four weeks. Her total retroactive pay was $80 ($20 x 4 weeks). Her total remuneration for the year is $3,500. Her province of employment is Manitoba. </p>
@@ -1958,7 +1958,6 @@
 </li>
 
 <li><h4 id="2b">More than $5,000 - Review the completed TD1 forms to determine if you need to deduct tax</h4>
-<p>If your employee did not complete new TD1 forms, use the same claim code that you used previously and continue to <a href="#retro1">step 6</a>.</p>
 <p>  <div data-ajax-replace="#ajax-review"></div></p>
 </li>
 </ol></li>
@@ -2316,10 +2315,10 @@
 	
  <p>If the payment is a: </p>  
   <ul class="list-unstyled cnjnctn-type-or ">
-        <li class="cnjnctn-col"><strong>Patronage payment</strong>, continue to <a href="#patron">step 1a</a></li>
-	<li class="cnjnctn-col"><strong>Payment made to a fisher (completed form TD3F)</strong>, continue to <a href="#fishers">step 1b</a></li>
-	<li class="cnjnctn-col"><strong>Payments of fees for services to a non-resident</strong>, continue to <a href="#fees-non">step 1c</a></li>
-               <li class="cnjnctn-col"><strong>Any other payments</strong>, continue to <a href="#otherpay">step 2</a></li>
+        <li class="cnjnctn-col"><strong>Patronage payment</strong>, continue to <a href="#patron">Step 1a</a>.</li>
+	<li class="cnjnctn-col"><strong>Payment made to a fisher (completed form TD3F)</strong>, continue to <a href="#fishers">Step 1b</a>.</li>
+	<li class="cnjnctn-col"><strong>Payments of fees for services to a non-resident</strong>, continue to <a href="#fees-non">Step 1c</a>.</li>
+               <li class="cnjnctn-col"><strong>Any other payments</strong>, continue to <a href="#otherpay">Step 2</a>.</li>
             </ul>
 
 <ol class="lst-stps-sub">
@@ -2360,7 +2359,7 @@
                               </li>
 
                   </ul>
-<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong> </p>
+<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong>.</p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
@@ -2427,7 +2426,7 @@
                               </li>
 
                   </ul>
-<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong> </p>
+<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong>. </p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>Matthew is a self-employed fisher. He wanted to have income tax withheld from the results of his catch. He provided the buyer by with his completed Form TD3F. The proceeds of his first catch were $80. </p>
@@ -2477,7 +2476,7 @@
                               </li>
 
                   </ul>
-<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong> </p>
+<p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong>. </p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>You decided to outsource your IT services to an independent contractor and contracted John, a non-resident of Canada, to do the work. You pay $500 per week for the service.   </p>
@@ -2609,10 +2608,10 @@
 </li> 
 
 <li><h4> Determine the calculation to use </h4>
- <p>If your employee's total remuneration is: </p>  
+ <p>If your employee's total remuneration in step 2 is: </p>  
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><strong>Less than $5,000</strong>, continue to <a href="#3a">step 3a</a></li>
-               <li class="cnjnctn-col"><strong>More than $5,000</strong>, continue to <a href="#3b">step 3b</a></li>
+              <li class="cnjnctn-col"><strong>Less than $5,000</strong>, continue to <a href="#3a">Step 3a</a>.</li>
+               <li class="cnjnctn-col"><strong>More than $5,000</strong>, continue to <a href="#3b">Step 3b</a>.</li>
             </ul>
 
 <ol class="lst-stps-sub">
